added checks for photocontroller

--- a/Game/Web.config
+++ b/Game/Web.config
@@ -35,6 +35,22 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+  
+    <roleManager enabled="true" defaultProvider="simple">
+      <providers>
+        <clear/>
+        <add name="simple" type="WebMatrix.WebData.SimpleRoleProvider,
+             WebMatrix.WebData" />
+      </providers>
+    </roleManager>
+    <membership defaultProvider="simple">
+      <providers>
+        <clear/>
+        <add name="simple" type="WebMatrix.WebData.SimpleMembershipProvider,
+             WebMatrix.WebData" />
+      </providers>
+    </membership>
+  
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
