--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -296,6 +296,7 @@
     <Content Include="Global.asax" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\Game.js" />
+    <Content Include="Scripts\googleMapsApi.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -309,8 +310,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
-    <Content Include="Scripts\masonry.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\result.js" />
+    <Content Include="Scripts\start.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -370,6 +372,7 @@
     <Content Include="Views\Game\index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Game\Result.cshtml" />
+    <Content Include="Views\User\_UserBlocks.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
